# linux-system-monitoring

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yaml  inotify-coredump.c  main.c
 dbus-systemd-signals/: dbus-systemd-signals.c
app/: create_coredump.sh  main.c
cmake/: ExternalDependencies.cmake  Installation.cmake  Packaging.cmake
create_coredumps_test/: fail  fail.c  infinite.c
cyclic-file-read/: CMakeLists.txt  dev.c  dev.h  stat.c  stat.h  test
cyclic-file-read/include/: common.h  disk.h  net.h  stat.h  sys.h
cyclic-file-read/src/: common.c  cycle-file-read.c  disk.c  net.c  pid.c  stat.c  sys.c
cyclic-sysinfo/: cyclic_sysinfo.c
debian/: install  rules
debian-package-repo/: Dockerfile  README.md  my-package-repo.list
epoll-psi/: epoll_psi.c
include/cyclic-file-read/: common.h  cyclic-file-read.h  net.h  pid.h  stat.h
include/inotify-coredump/: inotify-coredump.h
include/inotify-pacct/: inotify_pacct.h  pacct.h
include/utilities/: mq.h  signal_handling.h
inotify-coredump/: CMakeLists.txt  inotify-coredump  inotify-coredump.c  inotify-coredump.h  main.c
inotify-pacct/: CMakeLists.txt  README.md  acct.c  build.sh  get_pacct.c  get_pacct.h  inotify_pacct  inotify_pacct.c  inotify_pacct.h  reset.sh  run.sh  run_bridge.sh  run_inotify_pacct.sh
inotify-pacct/inotify-pacct/: CMakeLists.txt  inotify_pacct.c  inotify_pacct.h
inotify-pacct/pacct-to-line-protocol/: CMakeLists.txt  pacct_to_line_protocol.c  pacct_to_line_protocol.h
inotify-pacct/process-accounting/: pacct.c  pacct.h
inotify-pacct/src/: CMakeLists.txt  diff.txt  main.c
journal-filter/: journal-filter.sh
logs-recording/: .gitignore
logs-recording/debian/: changelog  control  sd-journal-filter.service
logs-recording/journal-filter/: journal-config.sh  journal-upload.sh
manpages/: coredump-to-influxdb.8  cyclic-file-read  cyclic-file-read.8  cyclic-sysinfo.8  dbus-systemd-signals.8  epoll-psi.8  inotify-coredump  inotify-coredump.8  inotify-coredump.man  inotify-pacct  inotify-pacct.8  posix-mq-to-mqtt-bridge  posix-mq-to-mqtt-bridge.8  sd-journal-filter  sd-journal-filter.8  sd-journal-to-influxdb  stats-recording.8
metrics-to-influxdb/coredump-to-influxdb/: functions.sh
metrics-to-influxdb/sd-journal-to-influxdb/tests/: CMakeLists.txt  journal_to_influxdb_test.cc  utils.h
new_structure/: .gitlab-ci.yml  CMakeLists.txt
new_structure/app/: main.c
new_structure/include/posix-mq-to-mqtt-bridge/: CMakeLists.txt
new_structure/include/utilities/: signal_handling.h
new_structure/src/: main.c
new_structure/src/cyclic-file-read/: cyclic-file-read.c
new_structure/src/dbus-systemd-signals/: dbus-systemd-signals.c
new_structure/src/inotify-coredump/: CMakeLists.txt  inotify-coredump.c  main.c
new_structure/src/inotify-pacct/: CMakeLists.txt  inotify-pacct.c  pacct.c
new_structure/src/posix-mq-to-mqtt-bridge/: CMakeLists.txt  bridge.c  main.c
new_structure/src/utilities/: signal_handling.c
old_structure/: .gitignore
old_structure/inotify-coredump/: CMakeLists.txt  inotify-coredump.c
old_structure/utilities/: mq.c
package-scripts/: postinst
posix-mq-to-mqtt-bridge/: CMakeLists.txt  bridge.c  bridge.h
server-pocs/: .gitmodules  README.md  telegraf.conf
server-pocs/debian-package-repo/: default.conf  distributions
server-pocs/metrics-to-influxdb/: Dockerfile  entrypoint.sh
server-pocs/metrics-to-influxdb/sd-journal-to-influxdb/: CMakeLists.txt  README.md
server-pocs/metrics-to-influxdb/sd-journal-to-influxdb/src/: main.c
server-pocs/metrics-to-influxdb/sd-journal-to-influxdb/src/publish/: CMakeLists.txt  publish_influxdb.c  publish_influxdb.h
server-pocs/metrics-to-influxdb/sd-journal-to-influxdb/src/sd-journal-to-influxdb/: CMakeLists.txt  sd_journal_to_influxdb.h
server-pocs/metrics-to-influxdb/sd-journal-to-influxdb/tests/: fixtures.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  create_coredump.sh
src/cyclic-file-read/: CMakeLists.txt  README.md
src/cyclic-file-read/src/: common.c  cyclic-file-read.c  disk.c  pid.c  stat.c  sys.c
src/cyclic-sysinfo/: README.md  cyclic_sysinfo.c
src/dbus-systemd-signals/: CMakeLists.txt  dbus-systemd-signals.c  dbus-systemd-signals.h
src/dbus-systemd-signals/tests/: test_error_handling.sh
src/epoll-psi/: CMakeLists.txt  epoll_psi.c
src/epoll-psi/tests/: test_process_psi_data.sh
src/inotify-coredump/: CMakeLists.txt  inotify-coredump.c  inotify-coredump.h  main.c
src/inotify-pacct/: CMakeLists.txt  README.md
src/inotify-pacct/include/: pacct_to_line_protocol.h
src/inotify-pacct/src/: inotify-pacct.c  main.c
src/posix-mq-to-mqtt-bridge/: CMakeLists.txt  bridge.c  bridge.h  main.c
src/utilities/: CMakeLists.txt  file_utils.c  line_protocol_escaper.c  line_protocol_escaper.h  line_protocol_parser.c  mq.c  mq.h  signal_handling.c  signal_handling.h  wr_files.c
stats-recording/: .gitlab-ci.yml  Dockerfile  build.sh
stats-recording/cmake/: ExternalDependencies.cmake  Installation.cmake  Packaging.cmake  Policies.cmake  toolchain.arm64.cmake
stats-recording/manpages/: cyclic-file-read.8  inotify-pacct.8  (+1 more)
stats-recording/src/inotify-coredump/: CMakeLists.txt  inotify-coredump.c  inotify-coredump.h
systemd-journal-remote/: Dockerfile
systemd-services/: cyclic-file-read.service  cyclic-sysinfo.service  dbus-systemd-signals.service  epoll-psi.service  inotify-coredump.service  inotify-pacct.service  posix-mq-to-mqtt-bridge.service
test/: CMakeLists.txt  README  fixtures.h  inotify-coredump-test.sh  test_bridge.cpp  test_inotify_coredump.c  test_inotify_coredump.cpp  unity_test_inotify_coredump.c
test/data/: coredump_input.txt  inotify_coredump_buffer.txt
test/fixture/: InotifyCoredumpFixture.h
test/mock/: MockInotifyCoredump.h  MockMQ.h  MockMq.h
test/test_utils/: CMakeLists.txt  test_utils.cpp  test_utils.h
test/unit/: inotify-coredump-test.sh
testing/: inotify-coredump-test.c  inotify-pacct-test.c
toolchains/: armhf-toolchain.cmake
utilities/: CMakeLists.txt  mq.c  mq.h
(+74 files in other folders)
